# Tial

./: .gitignore  .gitmodules  CMakeLists.txt  ci.settings
Tial/: CMakeLists.txt
Tial/TialTesting/: CMakeLists.txt  Check.hpp  Info.plist.in  Main.hpp  Suite.hpp  Thread.hpp  TialTesting.cmake  TialTesting.hpp  TialTestingConfig.cmake.in
Tial/TialTesting/Preprocessor/: CMakeLists.txt  Preprocessor.py  TialTestingPreprocessor.py  TialTestingPreprocessorDriver.py
Tial/TialTesting/Preprocessor/tial_testing_preprocessor/: __init__.py  preprocessor.py  regex.py  source.py  utils.py
Tial/TialTesting/src/: Check.cpp  Main.cpp  Thread.cpp
Tial/TialTesting/tests/: Testing.cpp
Tial/TialUtility/: ABI.hpp  Algorithm.hpp  ArgumentParser.hpp  CMakeLists.txt  Directory.hpp  Enum.hpp  Exception.hpp  Language.hpp  Logger.hpp  Module.hpp  Path.hpp  Platform.hpp  StreamOperator.hpp  Strings.hpp  Thread.hpp  TialDefaultConfig.cmake.in  TialPostBuild.cmake  TialUtility.cmake  TialUtility.hpp  TialUtilityConfig.cmake.in  Time.hpp  TypeTraits.hpp  Wildcards.hpp
Tial/TialUtility/compat/experimental/: string_view
Tial/TialUtility/src/: ABI.cpp  Algorithm.cpp  ArgumentParser.cpp  Directory.cpp  Exception.cpp  Logger.cpp  Path.cpp  Platform.cpp  Thread.cpp
Tial/TialUtility/src/compat/: codecvt.cpp
Tial/TialUtility/tests/: Algorithm.cpp  ArgumentParser.cpp  Directory.cpp  Exception.cpp  Language.cpp  Path.cpp  Platform.cpp  StreamOperator.cpp  Strings.cpp  Time.cpp  Wildcards.cpp
